--- a/true/package.json
+++ b/true/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "@types/react-big-calendar": "^1.16.3",
+    "axios": "^1.13.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
+    "react": "^18.3.1",
+    "react-big-calendar": "^1.19.4",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
