--- a/true/package.json
+++ b/true/package.json
@@ -10,9 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^1.0.6",
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.16.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-dropzone": "^14.3.8",
+    "react-router-dom": "^7.10.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
